feat: no-comma pipe

--- a/src/app/components/CurrencySelector/currency-selector/currency-selector.component.html
+++ b/src/app/components/CurrencySelector/currency-selector/currency-selector.component.html
@@ -1,5 +1,5 @@
 <div class="currency-selector">
-    <input id="currency-value" type="number" [value]="currencyValue | currency :'1.0-2'"
+    <input id="currency-value" type="number" [value]="currencyValue | number :'1.0-2' |noComma"
         (change)="OnInputChanged($event)">
     <select id="currencty-selector" [(ngModel)]="currencySymbol" (ngModelChange)="OnInputChanged(null)">
         <option *ngFor="let item of currencies" value={{item}}>{{item}}</option>
