--- a/src/app/components/Converter/converter.component.css
+++ b/src/app/components/Converter/converter.component.css
@@ -1,5 +1,7 @@
 .converter__wrapper {
-    min-height: 100px;
     display: flex;
     justify-content: space-evenly;
+    border: solid 1px;
+    border-radius: 10px;
+    padding: 1%;
 }
